crates/pardosa/tests/ui/no_root_event_log_module.rs
use pardosa::event_log::EventLog;
fn main() {
    let _: Option<EventLog<u64, std::io::Cursor<Vec<u8>>>> = None;
}
